# University-work

./: .gitignore  CMakeLists.txt  README.md
Courses/_C-CPP/: .gitignore  CMakeLists.txt
Courses/_C-CPP/035_CppLabMath/resheniq 2/: main.cpp
Courses/_C-CPP/112-CppBasics/Traykov-112/: swapWithBitshift.cpp
Courses/_C-CPP/112-CppBasics/Traykov-112/Arrays and pointers/: 1_FunctionPointers.cpp  2_functionSignatureDefaultArgument.cpp  3-0_FunctionPointer.cpp  3-1_RegisteringAndCallback-functions.cpp  3-1_RegisteringAndCallback-functions_and_typedef.cpp  4-0_MemoryAllocation.cpp  5_inlineFunctions.cpp  6_Macros.cpp  7_FunctionPointerAsReturnValue.cpp  pointer_constants.cpp  pointer_start.cpp  pointer_void.cpp
Courses/_C-CPP/112-CppBasics/Traykov-112/External-Exercies/: 1_ArrInReverse.cpp  2_NmodKArr.cpp  3_firstMaxIndex.cpp  4_LongestNonDecreasing.cpp  manageArray.cpp
Courses/_C-CPP/112-CppBasics/Traykov-112/Kontrolni/: 1_convertNumber.cpp  2-FunctionPointers.cpp
Courses/_C-CPP/112-CppBasics/Traykov-112/Matrices/: diagonals.c  dynamics.h  multiplication.c  printMatrix.c  scalar.c  transpose.c
Courses/_C-CPP/212-OOP/: 031325-CopyConstructors.cpp  Double.cpp  main.cpp
Courses/_C-CPP/212-OOP/Traykov-OOP-212-Preparation/1-Classes/: entry.cpp
Courses/_C-CPP/212-OOP/Traykov-OOP-212-Preparation/2-Operator-overloading/: BigInteger.cpp  BigInteger.h  Money.cpp
Courses/_C-CPP/212-OOP/Traykov-OOP-212-Preparation/3-Operator-overloading-p2/: Double.cpp  entry.cpp
Courses/_C-CPP/212-OOP/Traykov-OOP-212-Preparation/4-Inheritance/: Employee.h  Programmer.h  entry.cpp
Courses/_C-CPP/212-OOP/Traykov-OOP-212-Preparation/5-Polymorphism/: main.cpp
Courses/_C-CPP/212-OOP/Traykov-OOP-212-Preparation/6-Exceptions/: Example 1 - TryCatch.cpp  Example 2 - TypeCastingThrow.cpp  Example 2 - TypicalException.cpp
Courses/_C-CPP/212-OOP/Traykov-OOP-212-Preparation/7-Files/: AnotherFileWithRecordsExercise.cpp  SerializationAndDeserialization.cpp
Courses/_C-CPP/212-OOP/Traykov-OOP-212-Preparation/TheExam/: Exam - original.cpp
Courses/_C-CPP/323_039-DSA/: measureComplexity.cpp  print.cpp
Courses/_C-CPP/323_039-DSA/039_GraphTheory/: graph_entry.cpp
Courses/_C-CPP/323_039-DSA/4-quick-merge-horare-lomuto/: sortArrs.cpp
Courses/_C-CPP/323_039-DSA/6-Towers-of-Hanoi/: hanoi.cpp
Courses/_C-CPP/323_039-DSA/newAlgorithms/: TODO.md
Courses/_C-CPP/324-CompetetiveProgramming/: .gitignore
Courses/_C-CPP/SoftUni 2024/C++/: .gitignore
(+921 files in other folders)
