cmake_minimum_required(VERSION 3.29)
project(entry)

set(CMAKE_CXX_STANDARD 20)

add_executable(entry



        #       fucntions
        #323/AlgorithmsDir/functions/print.cpp
        #323/AlgorithmsDir/functions/swap.cpp

#       algorithms
       #323/AlgorithmsDir/mergeSort.cpp
        #323/AlgorithmsDir/quickSort.cpp

#       executing points

        323/9/IdealyBalancedTree.cpp
        323/9/traversal.cpp
        323/9/traversal.h




) # executable files
