cmake_minimum_required(VERSION 3.29)
project(entry)

set(CMAKE_CXX_STANDARD 20)

add_executable(entry
        323/9/IdealyBalancedTree.cpp
        323/9/traversal.cpp
        323/9/traversal.h
        #        323/10/_BST.cpp
#        323/10/_operations.h
#        323/10/_operations.cpp



) # executable files
