cmake_minimum_required(VERSION 3.31)
project(_C_CPP)

add_executable(_C_CPP)
        
target_sources(_C_CPP

    PRIVATE
        #112-CppBasics/Traykov-112/Kontrolni/1_convertNumber.cpp
        #112-CppBasics/Traykov-112/Kontrolni/2-FunctionPointers.cpp
        #112-CppBasics/Traykov-112/Kontrolni/3_functionSignatureDefaultArgument.cpp
        #112-CppBasics/Traykov-112/Kontrolni/4_FunctionPointer.cpp
        #"112-CppBasics/Traykov-112/Arrays and pointers/3-1_RegisteringAndCallback-functions.cpp"
        #"112-CppBasics/Traykov-112/Arrays and pointers/4-0_MemoryAllocation.cpp"
        #"112-CppBasics/Traykov-112/Arrays and pointers/5_inlineFunctions.cpp"
        "112-CppBasics/Traykov-112/Arrays and pointers/6_Macros.cpp"
        #"112-CppBasics/Traykov-112/Arrays and pointers/7_FunctionPointerAsReturnValue.cpp"
)


